# graph-attention-replanner

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
graph_attention_replanner/config/: LogFileConfig.py  MissionPlanConfig.py  __init__.py  import_func.py
graph_attention_replanner/demo/: demo.py
graph_attention_replanner/example/: benchmark.ipynb  building_up_problem.ipynb  getting_started.ipynb
graph_attention_replanner/method/enumeration/: enum2hist.py  enum2median.py  enumeration.py  enumeration_breakattime.py  eval_enum.py  mediantime2tour.py  permutation.py
graph_attention_replanner/method/gat/: __init__.py  eval_gat.py  eval_gat_generalize.py  eval_gat_generalize_runtime.py  eval_gat_get_details.py  eval_gat_runtime.py  eval_random.py  run_one_sample.py  train.py
graph_attention_replanner/method/gat/lightning_logs/version_1/: metrics.csv
graph_attention_replanner/method/gat/lightning_logs/version_2/: hparams.yaml
graph_attention_replanner/method/lkh/: eval_lkh.py  lkh_mtsp_a_algorithm.py
graph_attention_replanner/plots/: GATR_General_vs_Specific(Fig5).ipynb  GATR_General_vs_Specific_runtime.ipynb  GATR_vs_other_benchmarks_full_distributions(Fig4).ipynb  GATR_vs_other_benchmarks_on_one_example(Fig3).ipynb
graph_attention_replanner/run/: gen_data.py  gen_data_td2tsp.py  run_eval.py  run_eval_generalization.py  run_train.py  run_train_generalization.py
patch/: rl4co.patch
tests/: test_apply_patch.sh
